--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "type": "git",
     "url": "https://github.com/alexk111/ngImgCrop.git"
   },
+  "main": "index.js",
   "dependencies": {},
   "devDependencies": {
     "connect-livereload": "^0.4.0",
     "express": "^4.4.5",
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "0.0.8",
-    "gulp-compass": "^1.1.9",
     "gulp-concat": "^2.2.0",
     "gulp-concat-util": "^0.2.3",
     "gulp-header": "^1.0.2",
@@ -30,6 +30,7 @@
     "gulp-open": "^0.2.8",
     "gulp-plumber": "^0.6.3",
     "gulp-rimraf": "^0.1.0",
+    "gulp-sass": "^2.2.0",
     "gulp-uglify": "^0.3.1",
     "gulp-util": "^2.2.19",
     "jshint-stylish": "^0.2.0",
